syntax = "proto3";

package org.volunteered.libs.user.v1;

option java_multiple_files = true;
option java_outer_classname = "UserServiceProto";
option java_package = "org.volunteered.libs.user.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";
import "org/volunteered/libs/common/v1/common.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (org.volunteered.libs.common.v1.User);
  rpc Get(GetRequest) returns (org.volunteered.libs.common.v1.User);
  rpc Update(UpdateUserRequest) returns (org.volunteered.libs.common.v1.User);
  rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
  string email = 4;
  string country = 5;
}

message GetRequest {
  google.protobuf.StringValue id = 1
  [(validate.rules).string = {min_len: 0}];
}

message UpdateUserRequest {
  google.protobuf.StringValue id = 1;
  org.volunteered.libs.common.v1.User user = 2;
}

message DeleteUserRequest {
  google.protobuf.StringValue id = 1
  [(validate.rules).string = {min_len: 0}];
}
